Fix font size for restaurant name on mobile

--- a/src/sass/sections/_hero.scss
+++ b/src/sass/sections/_hero.scss
@@ -52,4 +52,8 @@
     position: absolute;
     width: 100vw;
     top: 10vh;
+
+    span {
+        font-size: 4rem;
+    }
 }
